--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <head>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </head>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic vel totam quis optio repudiandae pariatur doloribus error incidunt corrupti, fuga itaque ab maiores, accusamus sequi tempora perferendis dolor! Tenetur, eaque.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus earum cumque praesentium magnam voluptatibus esse enim quibusdam repellendus perspiciatis optio fugiat saepe quis, sequi reiciendis adipisci sed qui ad ex.</p>
         </article>
     </main>
 </body>
