--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site CursoeVideo</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
@@ -13,11 +14,18 @@
         </head>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic vel totam quis optio repudiandae pariatur doloribus error incidunt corrupti, fuga itaque ab maiores, accusamus sequi tempora perferendis dolor! Tenetur, eaque.</p>
+            <p>A <abbr title="HyperTextMarkup Language">HTML</abbr> é uma 
+            linguagem de marcação para a criação de sites. Atualmente na versão 5,
+            ela usa a semântica dos elementos para criar o conteúdo de uma página
+            Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as 
+            configurações visuais que um site vai ter.</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus earum cumque praesentium magnam voluptatibus esse enim quibusdam repellendus perspiciatis optio fugiat saepe quis, sequi reiciendis adipisci sed qui ad ex.</p>
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script 
+            criada para aumentar a interatividade entre um site e seus visitantes.
+            Os códigos em JS são executados dentro do navegador e dão acesso acesso
+            elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
         </article>
     </main>
 </body>
