--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Curso em Vídeo</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <img src="imagens/curso-em-video-cor.png" alt="Curso em vídeo">
 </head>
 <body>
     <main>
@@ -15,11 +16,15 @@
         </head>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic vel totam quis optio repudiandae pariatur doloribus error incidunt corrupti, fuga itaque ab maiores, accusamus sequi tempora perferendis dolor! Tenetur, eaque.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML 5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus earum cumque praesentium magnam voluptatibus esse enim quibusdam repellendus perspiciatis optio fugiat saepe quis, sequi reiciendis adipisci sed qui ad ex.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
