--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Curso em Vídeo</title>
     <link rel="stylesheet" href="estilos/style.css">
-    <img src="imagens/curso-em-video-cor.png" alt="Curso em vídeo">
+
 </head>
 <body>
     <main>
         <head>
             <h1>Cursos Grátis</h1>
-            <img src="" alt="">
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Video">
         </head>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
