--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic vel totam quis optio repudiandae pariatur doloribus error incidunt corrupti, fuga itaque ab maiores, accusamus sequi tempora perferendis dolor! Tenetur, eaque.</p>
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
             <p><a href="curso-html.html">Acesse o curso de HTML 5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
             <img class="lado"src="imagens/curso-javascript.png" alt="Curso JavaScript">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus earum cumque praesentium magnam voluptatibus esse enim quibusdam repellendus perspiciatis optio fugiat saepe quis, sequi reiciendis adipisci sed qui ad ex.</p>
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade netre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Objetct Model">DOM</abbr></p>
             <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
